--- a/styles/less/about.less
+++ b/styles/less/about.less
@@ -24,10 +24,10 @@ body.about {
         .flex-center();
         .pa(@card-cool-pa);
 
-        background-color: @dark-color;
+        // background-color: @main-color !important;
 
         img.team-member.photo {
-          .size-hw(@w-8);
+          width: @w-8;
           .circle();
           border: @w-2 solid @light-color;
           background-color: @dark-color;
